--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: Sysmedicine PhD Course 2020
+description: Systems Biology of Human Metabolism and Gut Microbiome (3 ECTS)
