--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: Sysmedicine PhD Course 2020
 description: Systems Biology of Human Metabolism and Gut Microbiome (3 ECTS)
+logo: img/logo.png
