--- a/LabPrep/env.yaml
+++ b/LabPrep/env.yaml
@@ -7,7 +7,7 @@ channels:
     - biobakery
 dependencies:
     # Basic
-    - python
+    #- python
     - jupyter
     - jupyterlab
     - pandas
@@ -17,7 +17,7 @@ dependencies:
     - numpy
     - scipy
     - scikit-learn
-    - r-essentials
+    #- r-essentials
     - r-base
     - r-devtools
     - r-biocmanager
