--- a/LabPrep/env.yaml
+++ b/LabPrep/env.yaml
@@ -4,6 +4,7 @@ channels:
     - conda-forge
     - rdonnelly
     - defaults
+    - agbiome
 dependencies:
     # Basic
     #- python
@@ -35,6 +36,10 @@ dependencies:
     - shortbred
     - humann2
     - diamond
+    - biopython
+    - cdhit
+    - muscle
+    - blast
     
     # Metabolomics --> Web based
     
