--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ GEM/data/.DS_Store
 .DS_Store
 transcriptomics/.Rhistory
 transcriptomics/results/Step1/Mus_musculus.GRCm38.index
+AdminStuff/Opening.pptx
+AdminStuff/Certificate.docx
+AdminStuff/Certificate of Appreciation.docx
