--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ transcriptomics/results/Step1/Mus_musculus.GRCm38.index
 AdminStuff/Opening.pptx
 AdminStuff/Certificate.docx
 AdminStuff/Certificate of Appreciation.docx
+AdminStuff/
